deploy/kubernetes/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: infervoyage-dev
  labels:
    app: frontend
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
    - name: https
      port: 8443
      targetPort: 8443
      nodePort: 30443
  selector:
    app: frontend
  type: NodePort
